<resources>
    <string name="app_name">Inohom</string>
    <string name="app_name_lower">inohom</string>
    <string name="accounts">Accounts</string>
    <string name="inohom_logo">inohom+</string>
    <string name="version_dummy">V.1.7.0</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="lighting">Lighting</string>
    <string name="curtain">Curtain</string>
    <string name="socket">Socket</string>
    <string name="scenario">Scenario</string>
    <string name="remote">Remote</string>
    <string name="camera">Camera</string>
    <string name="alarm">Alarm</string>
    <string name="intercom">Intercom</string>
    <string name="system">System</string>
    <string name="heating">Heating</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="sensor">Sensor</string>
    <string name="site_management">Site Management</string>
    <string name="concierge">Concierge</string>
    <string name="management_map">Management Map</string>
    <string name="serkan_led">Serkan LED</string>
    <string name="management_spot">Management Spot</string>
    <string name="lamp">Lamp</string>
    <string name="board_lighting_2">Board Lighting 2</string>
    <string name="technical_lighting">Technical Lighting</string>
    <string name="rd_wc">RD WC</string>
    <string name="meeting_lighting">Meeting Lighting</string>
    <string name="entrance_lighting">Entrance Lighting</string>
    <string name="kitchen_lighting">Kitchen Lighting</string>
    <string name="basement_storage_1">Basement Storage Lighting 1</string>
    <string name="field_fault_lighting_1">Field-Fault Lighting 1</string>
    <string name="something_went_wrong">Something Went Wrong!</string>
    <string name="success">Success!</string>
</resources>