<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_64"
        android:background="@drawable/btn_bg"
        android:contentInsetStart="@dimen/_0"
        android:contentInsetLeft="@dimen/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/back_action_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back"
            android:text="@string/back"
            android:padding="@dimen/_10"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18"
            android:visibility="gone"
            app:contentInsetStart="@dimen/_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:visibility="visible" />

        <TextView
            android:id="@+id/main_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name_lower"
            android:textColor="@color/white"
            android:textSize="@dimen/text_21" />

        <ImageButton
            android:id="@+id/settings_icon"
            android:layout_width="@dimen/_48"
            android:layout_height="@dimen/_48"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10"
            android:background="@null"
            android:contentDescription="@string/settings"
            android:src="@drawable/ic_setting" />
    </Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="@dimen/_0"
        android:layout_height="@dimen/_0"
        app:defaultNavHost="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:navGraph="@navigation/nav_graph" />
</androidx.constraintlayout.widget.ConstraintLayout>